# keelson

./: AGENTS.md  AWESOME-HAW-PLUGINS.md  Cargo.toml  README.md  deny.toml  flake.nix  plugins-index.json
.claude/rules/: rust.md
.github/workflows/: audit.yml  ci.yml  demo.yml  docker.yml  pages.yml  release.yml
bindings/go/: README.md  go.mod
bindings/go/example/haw-hello/: main.go
bindings/go/hawplugin/: hawplugin.go
bindings/python/: README.md  pyproject.toml
bindings/python/example/: haw-hello
bindings/python/haw_plugin/: __init__.py
crates/haw-artifact/: Cargo.toml
crates/haw-artifact/src/: main.rs
crates/haw-aspice/src/: trace.rs
crates/haw-compliance/: Cargo.toml
crates/haw-compliance/src/: main.rs
crates/haw-core/: Cargo.toml
crates/haw-core/src/: lib.rs  security.rs
crates/haw-core/src/audit/: mod.rs
crates/haw-core/src/change/: mod.rs
crates/haw-core/src/git/: mod.rs
crates/haw-core/src/hooks/: mod.rs
crates/haw-core/src/lock/: mod.rs
crates/haw-core/src/manifest/: edit.rs  mod.rs  model.rs  toml_loader.rs
crates/haw-core/src/manifest/import/: mod.rs
crates/haw-core/src/resolver/: mod.rs
crates/haw-core/src/snapshot/: mod.rs
crates/haw-core/src/workspace/: mod.rs
crates/haw-core/tests/: import.rs  lock_and_change.rs  manifest.rs
crates/haw-forge/: Cargo.toml
crates/haw-forge/src/: bitbucket.rs  github.rs  gitlab.rs  http.rs  lib.rs  orchestrate.rs
crates/haw-forge/tests/: live_smoke.rs  orchestrate.rs
crates/haw-git/: Cargo.toml
crates/haw-git-gate/: Cargo.toml
crates/haw-git-gate/src/: main.rs
crates/haw-git/src/: lib.rs  parallel.rs
crates/haw-git/tests/: shellgit.rs
crates/haw-jira/src/: jira.rs
crates/haw-merge/: Cargo.toml
crates/haw-merge/src/: git.rs  lib.rs
crates/haw-merge/tests/: merge.rs
crates/haw-misra/src/: scan.rs
crates/haw-plugin/: Cargo.toml
crates/haw-plugin/src/: lib.rs
crates/haw-tui/: Cargo.toml
crates/haw-tui/src/: lib.rs
crates/haw-tui/tests/: render.rs
crates/hawser/: Cargo.toml
crates/hawser/src/: main.rs  publish.rs
crates/hawser/src/controller/: cli.rs  demo.rs
crates/hawser/tests/: golden.rs
crates/keel-cli/src/: main.rs
crates/keel-core/: Cargo.toml
crates/keel-core/src/: lib.rs
crates/keel-core/src/change/: mod.rs
crates/keel-core/src/git/: mod.rs
crates/keel-core/src/lock/: mod.rs
crates/keel-core/src/manifest/: mod.rs  model.rs
crates/keel-core/src/snapshot/: mod.rs
crates/keel-core/src/workspace/: mod.rs
crates/keel-core/tests/: lock_and_change.rs
crates/keel-forge/: Cargo.toml
crates/keel-forge/src/: github.rs  gitlab.rs  lib.rs  orchestrate.rs
crates/keel-forge/tests/: orchestrate.rs
crates/keel-git/: Cargo.toml
crates/keel-git/src/: lib.rs
crates/keel-git/tests/: shellgit.rs
crates/keel-merge/src/: lib.rs
crates/keel-merge/tests/: merge.rs
crates/keel-tui/src/: lib.rs
demo/: cli-changeset.tape  cli-compose.tape  cli-merge.tape  cli-run-verify.tape  cli.tape  setup.sh  tui.tape
docs/: ARCHITECTURE.md  CLI-DESIGN.md  COMMERCIALIZATION.md  COMPLIANCE.md  DISTRIBUTION.md  EXAMPLES.md  EXTENDING.md  INSTALL.md  INTEGRATION.md  LAUNCH.md  PLUGINS.md  QUALIFICATION-KIT.md  SECURITY.md  SUMMARY.md
docs/assets/: learn.css
docs/learn/: 00-what-is-hawser.md  01-install-and-first-run.md  01-install.md  02-the-manifest.md  02-your-first-stack.md  03-sync-and-the-lockfile.md  03-the-daily-workflow.md  04-cross-repo-changesets.md  04-the-tui-cockpit.md  05-changesets-across-repos.md  05-the-tui-cockpit.md  06-build-test-and-verify.md  06-plugins-and-extending.md  07-going-to-production.md  08-build-a-plugin-mcp.md
examples/: haw.toml
examples/automotive-pinned/: haw.toml
examples/embedded-bsp/: haw.toml
examples/plugins/haw-commit-ai/: README.md  haw-commit-ai
examples/rpi-pico/: README.md  haw.toml
landing/: index.html  styles.css
landing/fr/: index.html
packaging/aur/: PKGBUILD  README.md
packaging/homebrew/: keelson.rb
packaging/scoop/: keelson.json
promo/: launch-copy.md  package-lock.json  package.json  tsconfig.json
promo/src/: Promo.tsx  Root.tsx  theme.ts
promo/src/components/: Terminal.tsx  anim.ts
promo/src/scenes/: Build.tsx  Hook.tsx  Manifest.tsx  Payoff.tsx  Problem.tsx  Sync.tsx  Verify.tsx
schemas/: README.md  haw.plugin.report.v1.json  haw.plugin.v1.json  haw.plugin.view.v1.json  haw.plugins.index.v1.json
site/src/: main.rs
xtask/src/: main.rs
