[workspace]
resolver = "3"
members = ["crates/*", "xtask"]

[workspace.package]
version = "0.1.12"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nastwinns/hawser"

[workspace.dependencies]
haw-core = { path = "crates/haw-core", version = "0.1.12" }
haw-git = { path = "crates/haw-git", version = "0.1.12" }
haw-forge = { path = "crates/haw-forge", version = "0.1.12" }
haw-merge = { path = "crates/haw-merge", version = "0.1.12" }
haw-tui = { path = "crates/haw-tui", version = "0.1.12" }
haw-plugin = { path = "crates/haw-plugin", version = "0.1.12" }
haw-aspice = { path = "crates/haw-aspice", version = "0.1.12" }
haw-jira = { path = "crates/haw-jira", version = "0.1.12" }
haw-misra = { path = "crates/haw-misra", version = "0.1.12" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
directories = "6"
indexmap = { version = "2", features = ["serde"] }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
octocrab = "0.54"
tokio = { version = "1", features = ["rt", "net", "time"] }
tempfile = "3"
thiserror = "2"
toml = "0.8"
toml_edit = "0.25"
nucleo-matcher = "0.3"
quick-xml = { version = "0.41", features = ["serialize"] }
serde_yaml = "0.9"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
