[package]
name = "haw-artifact"
description = "haw plugin: haw-artifact (haw-<name> dispatch)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
haw-plugin.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
