[package]
name = "haw-core"
description = "Keelson domain logic: manifest, lock, resolver, workspace, changesets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
indexmap.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
toml_edit.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
