[package]
name = "haw-git-gate"
description = "haw plugin: haw-git-gate (haw-<name> dispatch)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
haw-plugin.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
