[package]
name = "haw-git"
description = "Keelson git operations: shell-out plumbing today, gitoxide reads later"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
directories.workspace = true
haw-core.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
