[package]
name = "haw-tui"
description = "Keelson ratatui fleet dashboard (thin over haw-core)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
haw-core.workspace = true
ratatui.workspace = true

[lints]
workspace = true
