[package]
name = "hawser"
description = "haw: multi-repo product composition and cross-repo MR orchestration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "haw"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
haw-core.workspace = true
haw-forge.workspace = true
haw-git.workspace = true
haw-merge.workspace = true
haw-tui.workspace = true
reqwest.workspace = true
serde_json.workspace = true
toml.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
