[package]
name = "hawser"
description = "haw: multi-repo product composition and cross-repo MR orchestration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "haw"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "Jean Balin <pros.balin@gmail.com>"
section = "utils"
priority = "optional"
assets = [["target/release/haw", "usr/bin/", "755"]]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/haw", dest = "/usr/bin/haw", mode = "755" },
]

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
haw-core.workspace = true
haw-forge.workspace = true
haw-git.workspace = true
haw-merge.workspace = true
haw-tui.workspace = true
reqwest.workspace = true
sigpipe = "0.1"
serde_json.workspace = true
toml.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
