[package]
name = "keel-forge"
description = "Keelson PR/MR orchestration behind the Forge trait (GitHub, GitLab)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keel-core.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ureq.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
